# LimitlessSDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rebuild.bat  rebuild_vs2010.bat  rebuildx64.bat  vs2008.bat  vs2008x64.bat  vs2010.bat  vs2010x64.bat  vs2012x64.bat  vs2013x64.bat  vs2013x64_rebuild.bat  vs2013x64_start.bat  vs2015x64.bat  vs2015x64_rebuild.bat
applications/: CMakeLists.txt
applications/Conversion/: CMakeLists.txt  conversion.cpp  conversion.h  conversion.ui  main.cpp
applications/DebugApp/: CMakeLists.txt  debugapp.cpp  debugapp.h  debugapp.qrc  debugapp.ui  main.cpp
applications/Sanctuary/: CMakeLists.txt  main.cpp  pluginattributes.cpp  pluginattributes.h  pluginattributes.ui  sanctuary.cpp  sanctuary.h  sanctuary.qrc  sanctuary.ui
filters/: CMakeLists.txt
filters/AudioControls/: AudioMeterView.cpp  AudioMeterView.h  AudioMeterView.ui  AudioMixerInfo.h  AudioMixerInputView.cpp  AudioMixerInputView.h  AudioMixerInputView.ui  AudioMixerMixView.cpp  AudioMixerMixView.h  AudioMixerMixView.ui  AudioMixerOutputView.cpp  AudioMixerOutputView.h  AudioMixerOutputView.ui  AudioMixerView.cpp  AudioMixerView.h  AudioMixerView.ui  CMakeLists.txt  audioControls_global.h  audioMeter.cpp  audioMeter.h  audioMixer.cpp  audioMixer.h  medialibHelpers.cpp  medialibHelpers.h
filters/AudioViewer/: CMakeLists.txt  audioMeter.cpp  audioMeter.h
filters/AvStreamOutput/: AvStreamOutput.cpp  AvStreamOutput.h  CMakeLists.txt  FMLEControl.cpp  FMLEControl.cpp.bak  FMLEControl.h  FMLEControl.h.bak  FMLEProfile.cpp  FMLEProfile.h
filters/ControlStructures/: CMakeLists.txt  branch.cpp  branch.h  combine.cpp  combine.h  gpuUpload.cpp  gpuUpload.h  gpuUploadSample.cpp  gpuUploadSample.h  join.cpp  join.h  synchronize.cpp  synchronize.h  tee.cpp  tee.h
filters/DirectShow/: CMakeLists.txt  DirectShowCapture.cpp  DirectShowCapture.h  QEdit.h
filters/GStreamerPlugin/: GStreamerFactory.h  GStreamerPlugin.cpp  GStreamerPlugin.h
filters/ImageFilters/: CMakeLists.txt  ClippingMask.cpp  ClippingMask.h  ColorConversion.cpp  ColorConversion.h  MoveToCpu.cpp  MoveToCpu.h  MoveToGpu.cpp  MoveToGpu.h  Overlay.cpp  Overlay.h
filters/ImageSource/: CMakeLists.txt  ImageSourceAttributeView.cpp  ImageSourceAttributeView.h  ImageSourceAttributeView.ui  imageSource.cpp  imageSource.h
filters/ImageViewer/: CMakeLists.txt  glview.cpp  glview.h  glview.ui  glwidget.cpp  glwidget.h  imageviewer.cpp  imageviewer.h  imageviewer_global.h
filters/ffmpeg/: CMakeLists.txt  codecDescription.cpp  codecDescription.h  ffmpegAudioSample.cpp  ffmpegAudioSample.h  ffmpegDecoder.cpp  ffmpegDecoder.h  ffmpegEncoder.cpp  ffmpegEncoder.h  ffmpegEncoderOutput.cpp  ffmpegEncoderOutput.h  ffmpegFrameSample.cpp  ffmpegFrameSample.h  ffmpegInput.cpp  ffmpegInput.h  ffmpegInputAttributeView.cpp  ffmpegInputAttributeView.h  ffmpegInputAttributeView.ui  ffmpegMediaFilter.cpp  ffmpegMediaFilter.h  ffmpegOutput.cpp  ffmpegOutput.h  ffmpegPacketSample.cpp  ffmpegPacketSample.h  ffmpegResources.cpp  ffmpegResources.h  ffmpegSwScale.cpp  ffmpegSwScale.h  ffmpegcontrols.cpp  ffmpegcontrols.h  ffmpegcontrols.ui  formatDescription.cpp  formatDescription.h  pixelFormatDescription.cpp  pixelFormatDescription.h
libraries/cvlib/: CMakeLists.txt  convolve_cl.cpp  gaussian_cl.cpp  image.cpp  imageFunctions_cl.cpp  kernels_cl.cpp  match.cpp  png.cpp  ppm.cpp  scharr_cl.cpp  simpleImage.cpp  sobel_cl.cpp  utils_cl.cpp
libraries/medialib/: CMakeLists.txt  audioBuffer.cpp  audioBufferWrapper.cpp  audioChannels.cpp  audioConversion.cpp  audioMix.cpp  audioOperations.cpp  audioPeak.cpp  simpleAudioBuffer.cpp  spectrogram.cpp  synchronize.cpp
plugins/: CMakeLists.txt
plugins/GraphView/: graphview.cpp  graphview.h  graphview_global.h
sdk/: CMakeLists.txt
sdk/AvStream/: AvClientConnection.cpp  AvClientConnection.h  AvPackets.h  AvStreamClient.cpp  AvStreamClient.h  AvStreamPipe.cpp  AvStreamPipe.h  AvStreamServer.cpp  AvStreamServer.h  CMakeLists.txt  avstream_define.h
sdk/Base/: Attribute.cpp  Attribute.h  AttributeContainer.cpp  AttributeContainer.h  Attributes.cpp  Attributes.h  CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h  Log.cpp  Log.h  MemoryLocation.h  PluginFactory.cpp  PluginFactory.h  PluginObject.cpp  PluginObject.h  PluginView.h  _json.h  base_define.h  common.h  json.h  serializer.h  typeName.h  types.h
sdk/Media/: AudioSample.cpp  AudioSample.h  BufferSample.cpp  BufferSample.h  CMakeLists.txt  EventSample.cpp  EventSample.h  FilterTypes.h  GPUBufferGLSample.cpp  GPUBufferGLSample.h  GPUBufferSample.cpp  GPUBufferSample.h  GPUContext.cpp  GPUContext.h  GPUImageGLSample.cpp  GPUImageGLSample.h  GPUImageSample.cpp  GPUImageSample.h  GpuImageGLSampleSet.cpp  GpuImageGLSampleSet.h  GpuImageSampleSet.cpp  GpuImageSampleSet.h  IAudioSample.cpp  IAudioSample.h  IFileSource.cpp  IFileSource.h  IImageSample.cpp  IImageSample.h  IImageSampleSet.h  IImageSetSample.h  IImageSource.cpp  IImageSource.h  IMedia.cpp  IMedia.h  IMediaFilter.cpp  IMediaFilter.h  IMediaSource.cpp  IMediaSource.h  ImageSample.cpp  ImageSample.h  (+39 more)
sdk/MediaPipeline/: CMakeLists.txt  IPipelineCallback.h  MediaPipeline.cpp  MediaPipeline.h  mediapipeline_define.h
sdk/MediaQt/: CMakeLists.txt  QImageSample.cpp  QImageSample.h  mediaqt_define.h  qtMediaDefines.h
sdk/QtComponents/: CMakeLists.txt  QImageSample.cpp  QImageSample.h  QtPluginView.h  SerializableObject.cpp  SerializableObject.h  customStyleSheet.cpp  customStyleSheet.h  darkorange.stylesheet  dialogWrapper.cpp  dialogWrapper.h  dockWrapper.cpp  dockWrapper.h  filterpopup.cpp  filterpopup.h  filterpopup.ui  glImageView.cpp  glImageView.h  listpopup.cpp  listpopup.h  listpopup.ui  mediaLogView.cpp  mediaLogView.h  mediaLogView.ui  mediaStoreView.cpp  mediaStoreView.h  mediaStoreView.ui  openglUtils.cpp  openglUtils.h  qComboBoxHelper.cpp  qComboBoxHelper.h  qSettingsHelper.cpp  qSettingsHelper.h  qtcomponents.qrc  qtcomponents_define.h  vuMeter.cpp  vuMeter.h
sdk/Utilities/: CMakeLists.txt  HttpRequestSync.cpp  HttpRequestSync.h  calibrationRig.cpp  calibrationRig.h  (+14 more)
(+51 files in other folders)
