#set build folder to plugins
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/plugins )
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${PROJECT_BINARY_DIR}/bin/${OUTPUTCONFIG}/plugins )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

add_subdirectory(AjaDevice)
add_subdirectory(AudioControls)
add_subdirectory(AvStreamOutput)
add_subdirectory(ControlStructures)
add_subdirectory(DeckLink)
#add_subdirectory(DirectorySource)
#add_subdirectory(DirectShow)
add_subdirectory(ffmpeg)
#add_subdirectory(GStreamerPlugin)
add_subdirectory(GPUStitcher)
add_subdirectory(ImageFilters)
#add_subdirectory(ImageUpload)
add_subdirectory(ImageViewer)
#add_subdirectory(PointGreyResearch)
