#set build folder to plugins
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/plugins )
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${PROJECT_BINARY_DIR}/bin/${OUTPUTCONFIG}/plugins )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

add_subdirectory(AudioControls)
add_subdirectory(AvStreamOutput)
add_subdirectory(ControlStructures)
#add_subdirectory(DirectShow)
add_subdirectory(ffmpeg)
#add_subdirectory(GStreamerPlugin)
add_subdirectory(ImageFilters)
add_subdirectory(ImageSource)
add_subdirectory(ImageViewer)

if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/privateProjects.cmake)
	include(${CMAKE_CURRENT_LIST_DIR}/privateProjects.cmake)
endif()
